tests/expectations/compiler/tuple/access_negative_fail.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [EPAR0370009]: unexpected string: expected 'identifier', found '-'
    --> compiler-test:7:24
     |
   7 |         return (t.0, t.-1); // Index `t.-1` is invalid.
     |                        ^"""]
